--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -1,4 +1,5 @@
 {% load information %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -49,6 +50,34 @@
       </div>
     </div>
   </nav>
+  <div class="container">
+    <div class="row">
+      {% for ob in obj %}
+      <div class="card" style="width: 18rem;margin: 10px;" >
+        <img src=" images/{{ob.image}}" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">{{ob.title}}</h5>
+          <p class="card-text">{{ob.caption|slice:"180"}} ...</p>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">An item</li>
+          <li class="list-group-item">A second item</li>
+          <li class="list-group-item">A third item</li>
+        </ul>
+        <div class="card-body">
+          <a href="#" class="card-link">Card link</a>
+          <a href="#" class="card-link">Another link</a>
+        </div>
+      </div>
+      {% endfor %}
+</div>
+</div>
+  <center>progress<div class="spinner-border text-success" role="status">
+    <span class="visually-hidden">Loading...</span>
+  </div></center>
+  <div class="progress" role="progressbar" aria-label="Success striped example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+    <div class="progress-bar progress-bar-striped bg-success" style="width: 25%"></div>
+  </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>  
 </body>
 </html>
