--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -50,34 +50,41 @@
       </div>
     </div>
   </nav>
+
+  اگه این بغل فاصله میبینی گوشیت خرابه این پیام هم برای تایید خرابی گوشیته
   <div class="container">
     <div class="row">
       {% for ob in obj %}
       <div class="card" style="width: 18rem;margin: 10px;" >
-        <img src=" images/{{ob.image}}" class="card-img-top" alt="...">
+        <img src="/images/{{ob.image}}" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">{{ob.title}}</h5>
           <p class="card-text">{{ob.caption|slice:"180"}} ...</p>
         </div>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item">An item</li>
-          <li class="list-group-item">A second item</li>
-          <li class="list-group-item">A third item</li>
+          <li class="list-group-item">{{ob.author}}</li>
+          <li class="list-group-item">{% for i in ob.Categories.all %}<a href="/c/{{i}}" style="text-decoration: none;">#{{i}}&nbsp;&nbsp;&nbsp;</a>{% endfor %}</li>
+          <li class="list-group-item">{{ob.published}}</li>
         </ul>
         <div class="card-body">
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
+          <a href="/{{ob.title}}" class="card-link" style="text-decoration: none;">ادامه همین پست</a><br>
+          <a href="#" class="card-link"  style="text-decoration: none;">{{ob.author}} بقیه پست های </a>
         </div>
       </div>
       {% endfor %}
 </div>
 </div>
-  <center>progress<div class="spinner-border text-success" role="status">
-    <span class="visually-hidden">Loading...</span>
-  </div></center>
-  <div class="progress" role="progressbar" aria-label="Success striped example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-    <div class="progress-bar progress-bar-striped bg-success" style="width: 25%"></div>
-  </div>
+
+<nav aria-label="...">
+  <ul class="pagination pagination-lg">
+    <li class="page-item disabled">
+      <a class="page-link" href="#" tabindex="-1">1</a>
+    </li>
+    <li class="page-item"><a class="page-link" href="#">2</a></li>
+   
+  </ul>
+</nav>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>  
 </body>
 </html>
