--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -1,5 +1,5 @@
 {% load information %}
-
+{% load datetime %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,10 +10,10 @@
 
   <title>صفحه اصلی | {% information "name" %}</title>
 </head>
-<body>
+<body style="direction: rtl;">
   <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="{% url 'home:homePage' %}">{% information "nameE" %}</a>
+      <a class="navbar-brand" href="{% url 'home:homePage' %}">{% information "name" %}</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -43,9 +43,9 @@
             <a class="nav-link disabled">شما وارد نشدید</a>
           </li>
         </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+        <form action="/search" method="post" class="d-flex" role="search">
+          <input class="form-control me-2" name="searchField" type="search" placeholder="بگرد بین نوشته ها" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">جستجو</button>
         </form>
       </div>
     </div>
@@ -61,14 +61,14 @@
           <h5 class="card-title">{{ob.title}}</h5>
           <p class="card-text">{{ob.caption|slice:"180"}} ...</p>
         </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">{{ob.author}}</li>
+        <ul style="direction: ltr" class="list-group list-group-flush">
+          <li class="list-group-item"><a style="text-decoration: none;" href="/@{{ob.author}}">@{{ob.author}}</a></li>
           <li class="list-group-item">{% for i in ob.Categories.all %}<a href="/c/{{i}}" style="text-decoration: none;">#{{i}}&nbsp;&nbsp;&nbsp;</a>{% endfor %}</li>
-          <li class="list-group-item">{{ob.published}}</li>
+          <li class="list-group-item" style="direction: rtl;">{{ob.tpublished|timesince:timee}}</li>
         </ul>
         <div class="card-body">
           <a href="/{{ob.title}}" class="card-link" style="text-decoration: none;">ادامه همین پست</a><br>
-          <a href="#" class="card-link"  style="text-decoration: none;">{{ob.author}} بقیه پست های </a>
+           
         </div>
       </div>
       {% endfor %}
