--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -1,90 +1,135 @@
-{% load information %}
-{% load datetime %}
+{% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+<title>{{siteData.siteNamePersian}} | {{siteData.siteNameEnglish}}</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<style>
+    @font-face {
+  font-family: Nazanin;
+  src: url({% static 'fonts/Nazanin.ttf' %});
+}
 
-  <title>صفحه اصلی | {% information "name" %}</title>
+body{font-family: "Nazanin";font-size: 20px;}
+</style>
 </head>
-<body style="direction: rtl;">
-  <nav class="navbar navbar-expand-lg bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="{% url 'home:homePage' %}">{% information "name" %}</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url 'home:homePage' %}">صفحه اصلی</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url "account:login" %}">خودتم پست بذار</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              هشتگ های ترند
-            </a>
-            <ul class="dropdown-menu">
-              {% for hashTags in trendhash %}
-                
-              <li><a class="dropdown-item"  href="/c/{{hashTags}}">#{{hashTags}}</a></li>
-              {% endfor %}
-              
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="{% url "detail:all" %}">همه ی هشتگ ها</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled">شما وارد نشدید</a>
-          </li>
-        </ul>
-        <form action="/search" method="post" class="d-flex" role="search">
-          <input class="form-control me-2" name="searchField" type="search" placeholder="بگرد بین نوشته ها" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">جستجو</button>
-        </form>
+<body class="w3-light-grey">
+
+<!-- w3-content defines a container for fixed size centered content, 
+and is wrapped around the whole page content, except for the footer in this example -->
+<div class="w3-content" style="max-width:1400px">
+
+<!-- Header -->
+<header class="w3-container w3-center w3-padding-32"> 
+  <h1><b>{{siteData.siteNameEnglish}}</b></h1>
+  <p><span class="w3-tag">{{siteData.siteNamePersian}}</span> خوش اومدید به وبلاگ خصوصی </p>
+</header>
+
+<!-- Grid -->
+<div class="w3-row">
+
+<!-- Blog entries -->
+<div class="w3-col l8 s12">
+  <!-- Blog entry -->
+  {% for ob in obj %}
+    <div class="w3-card-4 w3-margin w3-white">
+    <img src="/images/{{ob.image}}" alt="Nature" style="width:100%">
+    <div class="w3-container" style="font-family: 'Nazanin' !important; direction: rtl;">
+      <h3 style="font-family: 'Nazanin' !important;"><b>{{ob.title}}</b></h3>
+      <h5>{{ob.author.get_full_name}}, <span class="w3-opacity">{{ob.published}}</span></h5>
+    </div>
+
+    <div class="w3-container" dir="rtl">
+      <p>{{ob.caption|truncatechars:300}}.</p>
+      <div class="w3-row">
+        <div class="w3-col m8 s12">
+          <a href="{% url 'detail:detail' ob.title %}"><p><button class="w3-button w3-padding-large w3-white w3-border"><b>ادامه پست »</b></button></p></a>
+        </div>
+        <div class="w3-col m4 w3-hide-small">
+          {% comment %} <p><span class="w3-padding-large w3-right"><b>Comments  </b> <span class="w3-tag">0</span></span></p> {% endcomment %}
+        </div>
       </div>
     </div>
-  </nav>
-
-  اگه این بغل فاصله میبینی گوشیت خرابه این پیام هم برای تایید خرابی گوشیته
-  <div class="container">
-    <div class="row">
-      {% for ob in obj %}
-      <div class="card" style="width: 18rem;margin: 10px;" >
-        <img src="/images/{{ob.image}}" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">{{ob.title}}</h5>
-          <p class="card-text">{{ob.caption|slice:"180"}} ...</p>
-        </div>
-        <ul style="direction: ltr" class="list-group list-group-flush">
-          <li class="list-group-item"><a style="text-decoration: none;" href="/@{{ob.author}}">@{{ob.author}}</a></li>
-          <li class="list-group-item">{% for i in ob.Categories.all %}<a href="/c/{{i}}" style="text-decoration: none;">#{{i}}&nbsp;&nbsp;&nbsp;</a>{% endfor %}</li>
-          <li class="list-group-item" style="direction: rtl;">{{ob.tpublished|timesince:timee}}</li>
-        </ul>
-        <div class="card-body">
-          <a href="/{{ob.title}}" class="card-link" style="text-decoration: none;">ادامه همین پست</a><br>
-           
-        </div>
-      </div>
-      {% endfor %}
-</div>
+  </div>
+  <hr>
+  {% endfor %}
+<!-- END BLOG ENTRIES -->
 </div>
 
-<nav aria-label="...">
-  <ul class="pagination pagination-lg">
-    <li class="page-item disabled">
-      <a class="page-link" href="#" tabindex="-1">1</a>
-    </li>
-    <li class="page-item"><a class="page-link" href="#">2</a></li>
-   
-  </ul>
-</nav>
+<!-- Introduction menu -->
+<div class="w3-col l4">
+  <!-- About Card -->
+  <div class="w3-card w3-margin w3-margin-top">
+  <img src="/w3images/avatar_g.jpg" style="width:100%">
+    <div class="w3-container w3-white">
+      <h4><b>My Name</b></h4>
+      <p>Just me, myself and I, exploring the universe of uknownment. I have a heart of love and a interest of lorem ipsum and mauris neque quam blog. I want to share my world with you.</p>
+    </div>
+  </div><hr>
+  
+  <!-- Posts -->
+  <div class="w3-card w3-margin">
+    <div class="w3-container w3-padding">
+      <h4>Popular Posts</h4>
+    </div>
+    <ul class="w3-ul w3-hoverable w3-white">
+      <li class="w3-padding-16">
+        <img src="/w3images/workshop.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+        <span class="w3-large">Lorem</span><br>
+        <span>Sed mattis nunc</span>
+      </li>
+      <li class="w3-padding-16">
+        <img src="/w3images/gondol.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+        <span class="w3-large">Ipsum</span><br>
+        <span>Praes tinci sed</span>
+      </li> 
+      <li class="w3-padding-16">
+        <img src="/w3images/skies.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+        <span class="w3-large">Dorum</span><br>
+        <span>Ultricies congue</span>
+      </li>   
+      <li class="w3-padding-16 w3-hide-medium w3-hide-small">
+        <img src="/w3images/rock.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+        <span class="w3-large">Mingsum</span><br>
+        <span>Lorem ipsum dipsum</span>
+      </li>  
+    </ul>
+  </div>
+  <hr> 
+ 
+  <!-- Labels / tags -->
+  <div class="w3-card w3-margin">
+    <div class="w3-container w3-padding">
+      <h4>Tags</h4>
+    </div>
+    <div class="w3-container w3-white">
+    <p><span class="w3-tag w3-black w3-margin-bottom">Travel</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">New York</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">London</span>
+      <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">IKEA</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">NORWAY</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">DIY</span>
+      <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Ideas</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Baby</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Family</span>
+      <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">News</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Clothing</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Shopping</span>
+      <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Sports</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Games</span>
+    </p>
+    </div>
+  </div>
+  
+<!-- END Introduction Menu -->
+</div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>  
+<!-- END GRID -->
+</div><br>
+
+<!-- END w3-content -->
+</div>
+
+<!-- Footer -->
+<footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
+  <button class="w3-button w3-black w3-disabled w3-padding-large w3-margin-bottom">Previous</button>
+  <button class="w3-button w3-black w3-padding-large w3-margin-bottom">Next »</button>
+  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+</footer>
+
 </body>
 </html>
